--- a/css/style.css
+++ b/css/style.css
@@ -207,7 +207,22 @@ li:hover {
   color: #ffbf00;
 }
 
-/* Favourites Page */
+/* Favourites */
+
+.searchBar {
+  height: auto;
+  margin: 0 auto;
+  max-width: 768px;
+}
+
+input[type="search"] {
+  font-size: 16px;
+  padding-right: 7px;
+}
+
+#favourites .bn-news-item {
+  padding-left: 0;
+}
 
 .empty-favourites {
   font-family: 'Source Sans Pro', 'Helvetica Neue', sans-serif;
